cmake_minimum_required(VERSION 3.20)
project(m_perception LANGUAGES CXX)

# C++ standard
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Options
option(DCP_BUILD_TESTS "Build tests" ON)
option(DCP_WARNINGS_AS_ERRORS "Treat warnings as errors" OFF)

# Dependencies
find_package(yaml-cpp REQUIRED)
find_package(Threads REQUIRED)
find_package(OpenCV REQUIRED)

# ONNX Runtime (Homebrew)
find_library(ONNXRUNTIME_LIB
  NAMES onnxruntime
  PATHS /opt/homebrew/lib
  REQUIRED
)

include_directories(/opt/homebrew/include)

# Core library
add_library(dashcam_core
  src/core/config_loader.cpp
  src/core/yolo_dnn.cpp

  src/infra/thread_runner.cpp

  src/stages/stage.cpp
  src/stages/camera_stage.cpp
  src/stages/preprocess_stage.cpp
  src/stages/inference_stage.cpp
  src/stages/tracking_stage.cpp

  src/apps/ansi_dashboard.cpp
  src/apps/hud_overlay.cpp
)

target_include_directories(dashcam_core
  PUBLIC
    ${PROJECT_SOURCE_DIR}/include
)

target_link_libraries(dashcam_core
  PUBLIC
    yaml-cpp::yaml-cpp
    Threads::Threads
    ${OpenCV_LIBS}
    ${ONNXRUNTIME_LIB}
)

# Warnings
if (MSVC)
  target_compile_options(dashcam_core PRIVATE /W4)
else()
  target_compile_options(dashcam_core PRIVATE -Wall -Wextra -Wpedantic)
endif()

if (DCP_WARNINGS_AS_ERRORS)
  if (MSVC)
    target_compile_options(dashcam_core PRIVATE /WX)
  else()
    target_compile_options(dashcam_core PRIVATE -Werror)
  endif()
endif()

# Applications
add_executable(live_pipeline apps/live_pipeline.cpp)
target_link_libraries(live_pipeline PRIVATE dashcam_core)

add_executable(live_viewer apps/live_viewer.cpp)
target_link_libraries(live_viewer PRIVATE dashcam_core)

add_executable(offline_replay apps/offline_replay.cpp)
target_link_libraries(offline_replay PRIVATE dashcam_core)

# Tests / Utilities
add_executable(thread_runner_test tests/thread_runner_test.cpp)
target_link_libraries(thread_runner_test PRIVATE dashcam_core)

add_executable(bounded_queue_test tests/bounded_queue_test.cpp)
target_link_libraries(bounded_queue_test PRIVATE dashcam_core)

# CTest
if (DCP_BUILD_TESTS)
  enable_testing()
endif()